# fastapi-jwt-learning

./: .gitignore  README.md  crud.py  database.py  dependencies.py  extensions.py  main.py  models.py  pyproject.toml  rbac.py  routers.py  schemas.py  security.py  services.py
routers/: main_routers.py  users.py
