[project]
name = "userjwtauthorization"
version = "0.1.0"
description = ""
authors = [
    {name = "lebedevavm",email = "lebedevavm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "black (>=25.1.0,<26.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (==3.2.2)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
